# calibrate-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  calibrate-0.1.0-py3-none-any.whl  docker-compose.yml  pense-0.1.0-py3-none-any.whl  pyproject.toml  test.txt
.cursor/: calibrate.md  pense.md
.cursor/hooks/: update-context.js
.cursor/rules/: architecture.md  context-first.md  env-var.md
.cursorrules/: pense.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
.specstory/: statistics.json
.specstory/history/: 2026-01-06_17-17-57Z-chat-name-generation-request.md  2026-01-06_17-17Z-chat-name-generation-request.md  2026-01-07_06-43-06Z-s3_prefix-removal-from-main.py.md  2026-01-07_06-43Z-s3-prefix-removal-from-main-py.md  2026-01-07_11-44-33Z-docker-compose,-github-actions,-and-volume-mount.md  2026-01-07_11-44Z-docker-compose,-github-actions,-and-volume-mount.md  2026-01-08_04-04-57Z-tts-evaluation-api-with-background-jobs.md  2026-01-08_04-04Z-tts-evaluation-api-with-background-jobs.md  2026-01-08_09-21-50Z-chat-name-generation-instructions.md  2026-01-08_09-21Z-chat-name-generation-instructions.md  2026-01-08_09-49-59Z-tool-table-description-column-and-crud.md  2026-01-08_09-49Z-tool-table-description-column-and-crud.md  2026-01-08_11-58-52Z-evaluation-and-data-extraction-tables.md  2026-01-08_11-58Z-evaluation-and-data-extraction-tables.md  2026-01-09_03-27Z-tests-table-and-crud-routers.md  (+68 more)
scripts/: backup.sh  init-minio.sh
src/: .env.example  auth_utils.py  dataset_utils.py  db.py  job_recovery.py  main.py  utils.py
(+52 files in other folders)
