[project]
name = "calibrate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.122.0",
    "uvicorn>=0.40.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "calibrate-agent",
]
